--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@
 addopts =
     --alluredir=allure-results
     --clean-alluredir
+    --log-date-format="%Y-%m-%d %H:%M:%S"
+    --log-format="%(asctime)s %(levelname)s %(message)s"
+    --log-cli-level=INFO
